--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://naveenshaji.github.io" # the base hostname & protocol for your site
 twitter_username: navvenshady
 github_username:  naveenshaji
+css: "cyan"
 
 # Build settings
 markdown: kramdown
