--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
-title: Naveen Shaji
-email: naveen@pixelblenders.com
+title: Jörg Hokamp
+email: info@joerghokamp.de
 description: > # this means to ignore newlines until "baseurl:"
-  Hello, I'm Naveen, a freelance front-end developer
-  and UI designer. Check out my projects on GitHub
+  Hi! I'm Joerg Hokamp - Linux enthusiast, open-source fan,
+  embedded developer and it-consultant.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://naveenshaji.github.io" # the base hostname & protocol for your site
-twitter_username: navvenshady
-github_username:  naveenshaji
+url: "http://jhokamp.github.io" # the base hostname & protocol for your site
+twitter_username: hamburgkind
+github_username:  jhokamp
 css: "cyan"
 
 # Build settings
