--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://jhokamp.github.io" # the base hostname & protocol for your site
 twitter_username: hamburgkind
 github_username:  jhokamp
-css: "cyan"
+css: "blue"
 
 # Build settings
 markdown: kramdown
